--- a/index.html
+++ b/index.html
@@ -2,132 +2,112 @@
 <html lang="zh-CN">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="index.ico" type="image/x-icon">
-  <title>字造-始终如一的创造</title>
-  <style>
-    /* 全局样式 */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* 导航栏样式 */
-    header {
-      background-color: rgba(0, 0, 0, 0.8);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 44px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .logo {
-      margin-right: 20px;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-
-    nav ul li {
-      margin: 0 20px;
-    }
-
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 14px;
-    }
-
-    /* 折叠按钮样式 */
-    .toggle-button {
-      display: none;
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    /* iframe 样式 */
-    .iframe-container {
-      overflow: hidden;
-      width: 100%;
-      height: calc(100vh - 44px);
-    }
-
-    iframe {
-      width: 100%;
-      height: 150%;/* 调整页面总长度 */
-      border: none;
-      display: block;
-      transform: translateY(-125px); /* 调整顶部显示 */
-    }
-
-    /* 媒体查询，当屏幕宽度小于600px时 */
-    @media (max-width: 600px) {
-      nav ul {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 44px;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.8);
-        width: 100%;
-      }
-
-      nav ul.show {
-        display: flex;
-      }
-
-      nav ul li {
-        margin: 10px 20px;
-      }
-
-      .toggle-button {
-        display: block;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="index.ico" type="image/x-icon">
+    <title>字造 - 始终如一的创造</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <!-- 导航栏 -->
-  <header>
-    <div class="logo">
-      <!-- 请将这里的 logo.png 替换为你实际的 logo 图片文件名 -->
-      <img src="logo.png" alt="网站 logo">
+    <!-- 导航栏和轮播图容器 -->
+    <div class="header-slider-container">
+        <!-- 导航栏 -->
+        <header>
+            <div class="logo">
+                <!-- 将 logo 图片用 a 标签包裹，点击返回首页 -->
+                <a href="index.html">
+                    <img src="logo.png" alt="网站 logo">
+                </a>
+            </div>
+            <button class="toggle-button" onclick="toggleNav()" aria-label="切换导航菜单">☰</button>
+            <nav>
+                <ul id="nav-ul">
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="fonts.html">字库产品</a>
+                        <ul>
+                            <li><a href="">Z系列（基础字库）</a></li>
+                            <li><a href="">Δ系列（可变字体）</a></li>
+                            <li><a href="">Ω系列（典藏字体）</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="bao.html">百宝库</a></li>
+                    <li><a href="hao.html">字造导航</a></li>
+                    <li><a href="more.html">更多服务</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- 轮播图 -->
+        <div class="slider">
+            <!-- 请将图片链接替换为你实际的图片地址 -->
+            <a href="https://example.com/slide1" target="_blank">
+                <img src="index/111.png" alt="幻灯片 1" class="active">
+            </a>
+            <a href="https://example.com/slide2" target="_blank">
+                <img src="index/222.png" alt="幻灯片 2">
+            </a>
+            <a href="https://example.com/slide3" target="_blank">
+                <img src="index/333.png" alt="幻灯片 3">
+            </a>
+            <button class="slider-button prev" onclick="prevSlide()" aria-label="上一张幻灯片"></button>
+            <button class="slider-button next" onclick="nextSlide()" aria-label="下一张幻灯片"></button>
+        </div>
+
+        <!-- 新增图片位容器 -->
+        <div class="image-grid">
+            <!-- 一共 20 张图片 -->
+            <a class="image-item" href="https://example.com/1" target="_blank">
+                <img src="index/option/1.JPG" alt="图片 1">
+                <h3 class="image-title">图片 1 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/2" target="_blank">
+                <img src="index/option/2.JPG" alt="图片 2">
+                <h3 class="image-title">图片 2 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/3" target="_blank">
+                <img src="index/option/3.JPG" alt="图片 3">
+                <h3 class="image-title">图片 3 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/4" target="_blank">
+                <img src="index/option/4.JPG" alt="图片 4">
+                <h3 class="image-title">图片 4 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/5" target="_blank">
+                <img src="index/option/5.JPG" alt="图片 5">
+                <h3 class="image-title">图片 5 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/6" target="_blank">
+                <img src="index/option/6.JPG" alt="图片 6">
+                <h3 class="image-title">图片 6 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/7" target="_blank">
+                <img src="index/option/7.JPG" alt="图片 7">
+                <h3 class="image-title">图片 7 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/8" target="_blank">
+                <img src="index/option/8.JPG" alt="图片 8">
+                <h3 class="image-title">图片 8 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/9" target="_blank">
+                <img src="index/option/9.JPG" alt="图片 9">
+                <h3 class="image-title">图片 9 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/10" target="_blank">
+                <img src="index/option/10.JPG" alt="图片 10">
+                <h3 class="image-title">图片 10 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/11" target="_blank">
+                <img src="index/option/11.JPG" alt="图片 11">
+                <h3 class="image-title">图片 11 标题</h3>
+            </a>
+            <a class="image-item" href="https://example.com/12" target="_blank">
+                <img src="index/option/12.JPG" alt="图片 12">
+                <h3 class="image-title">图片 12 标题</h3>
+            </a>
+        </div>
     </div>
-    <button class="toggle-button" onclick="toggleNav()">☰</button>
-    <nav>
-      <ul id="nav-ul">
-        <li><a href="index.html">首页</a></li>
-        <li><a href="fonts.html">字库产品</a></li>
-        <li><a href="bao.html">百宝库</a></li>
-        <li><a href="hao.html">字造导航</a></li>
-        <li><a href="more.html">更多服务</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- 嵌入的网址作为主体页面 -->
-  <div class="iframe-container">
-    <iframe src="https://www.yuque.com/zizao/home/hello" frameborder="0"></iframe>
-  </div>
-
-  <script>
-    function toggleNav() {
-      const navUl = document.getElementById('nav-ul');
-      navUl.classList.toggle('show');
-    }
-  </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
