--- a/index.html
+++ b/index.html
@@ -6,108 +6,289 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="index.ico" type="image/x-icon">
     <title>字造 - 始终如一的创造</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 全局样式 */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+
+        /* 导航栏样式 */
+        header {
+            background-color: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(20px);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 44px;
+            position: relative;
+            z-index: 3;
+            transition: background-color 0.3s ease;
+            padding: 0 200px;
+        }
+
+        header:hover {
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .logo {
+            margin-right: 20px;
+            transition: transform 0.3s ease;
+        }
+
+        .logo a img {
+            display: block;
+        }
+
+        .logo:hover {
+            transform: scale(1.1);
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        nav > ul > li {
+            margin: 0 20px;
+            position: relative;
+        }
+
+        nav > ul > li > a {
+            color: #d6d6d6;
+            text-decoration: none;
+            font-size: 12px;
+            position: relative;
+            display: block;
+            padding: 10px 0;
+            transition: color 0.3s ease;
+        }
+
+        nav > ul > li > a:hover {
+            color: #fff;
+        }
+
+        /* 导航栏一级链接下划线动画 */
+        nav > ul > li > a::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: #fff;
+            transform: scaleX(0);
+            transform-origin: bottom right;
+            transition: transform 0.3s ease;
+        }
+
+        nav > ul > li > a:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+        }
+
+        /* 子菜单样式 */
+        nav ul li ul {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: -20px;
+            background-color: #fff;
+            min-width: 200px;
+            border-radius: 0 0 10px 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-10px);
+            transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            z-index: 4;
+        }
+
+        nav ul li:hover ul {
+            display: block;
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
+        nav ul li ul li {
+            margin: 0;
+        }
+
+        nav ul li ul li a {
+            color: #333;
+            padding: 12px 20px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            font-size: 13px;
+            display: block;
+            text-decoration: none;
+        }
+
+        nav ul li ul li a:hover {
+            background-color: #f5f5f5;
+            color: #0070c9;
+        }
+
+        /* 折叠按钮样式 */
+        .toggle-button {
+            display: none;
+            background: none;
+            border: none;
+            color: #d6d6d6;
+            font-size: 20px;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .toggle-button:hover {
+            color: #fff;
+        }
+
+        /* 嵌入网页容器样式 */
+        .iframe-container {
+            flex: 1;
+            width: 100%;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .iframe-container iframe {
+            position: absolute;
+            top: -125px; /* 隐藏顶部 100px 的内容 */
+            bottom: -400px; /* 隐藏底部 100px 的内容 */
+            width: 100%;
+            height: calc(100% + 500px); /* 增加高度以补偿隐藏的部分 */
+            border: none;
+        }
+
+        /* 媒体查询，当屏幕宽度小于600px时 */
+        @media (max-width: 600px) {
+            header {
+                padding: 0 10px;
+            }
+
+            nav ul {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 44px;
+                left: 0;
+                background-color: rgba(0, 0, 0, 0.8);
+                width: 100%;
+            }
+
+            nav ul.show {
+                display: flex;
+            }
+
+            nav ul li {
+                margin: 10px 20px;
+            }
+
+            .toggle-button {
+                display: block;
+            }
+
+            nav ul li ul {
+                position: static;
+                background-color: transparent;
+                box-shadow: none;
+                transform: none;
+                opacity: 1;
+                visibility: visible;
+                display: none;
+            }
+
+            nav ul li:hover ul {
+                display: block;
+            }
+
+            nav ul li ul li a {
+                color: #fff;
+            }
+        }
+
+        /* 媒体查询，当屏幕宽度在601px - 768px之间时（平板） */
+        @media (min-width: 601px) and (max-width: 768px) {
+            header {
+                padding: 0 20px;
+            }
+
+            nav > ul > li {
+                margin: 0 10px;
+            }
+
+            nav > ul > li > a {
+                font-size: 10px;
+            }
+        }
+
+        /* 媒体查询，当屏幕宽度在769px - 992px之间时（小桌面） */
+        @media (min-width: 769px) and (max-width: 992px) {
+            header {
+                padding: 0 50px;
+            }
+
+            nav > ul > li {
+                margin: 0 15px;
+            }
+        }
+
+        /* 媒体查询，当屏幕宽度在993px - 1200px之间时（大桌面） */
+        @media (min-width: 993px) and (max-width: 1200px) {
+            header {
+                padding: 0 100px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <!-- 导航栏和轮播图容器 -->
-    <div class="header-slider-container">
-        <!-- 导航栏 -->
-        <header>
-            <div class="logo">
-                <!-- 将 logo 图片用 a 标签包裹，点击返回首页 -->
-                <a href="index.html">
-                    <img src="logo.png" alt="网站 logo">
-                </a>
-            </div>
-            <button class="toggle-button" onclick="toggleNav()" aria-label="切换导航菜单">☰</button>
-            <nav>
-                <ul id="nav-ul">
-                    <li><a href="index.html">首页</a></li>
-                    <li><a href="fonts.html">字库产品</a>
-                        <ul>
-                            <li><a href="">Z系列（基础字库）</a></li>
-                            <li><a href="">Δ系列（可变字体）</a></li>
-                            <li><a href="">Ω系列（典藏字体）</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="bao.html">百宝库</a></li>
-                    <li><a href="hao.html">字造导航</a></li>
-                    <li><a href="more.html">更多服务</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <!-- 轮播图 -->
-        <div class="slider">
-            <!-- 请将图片链接替换为你实际的图片地址 -->
-            <a href="https://example.com/slide1" target="_blank">
-                <img src="index/111.png" alt="幻灯片 1" class="active">
-            </a>
-            <a href="https://example.com/slide2" target="_blank">
-                <img src="index/222.png" alt="幻灯片 2">
-            </a>
-            <a href="https://example.com/slide3" target="_blank">
-                <img src="index/333.png" alt="幻灯片 3">
-            </a>
-            <button class="slider-button prev" onclick="prevSlide()" aria-label="上一张幻灯片"></button>
-            <button class="slider-button next" onclick="nextSlide()" aria-label="下一张幻灯片"></button>
-        </div>
-
-        <!-- 新增图片位容器 -->
-        <div class="image-grid">
-            <!-- 一共 20 张图片 -->
-            <a class="image-item" href="https://example.com/1" target="_blank">
-                <img src="index/option/1.JPG" alt="图片 1">
-                <h3 class="image-title">图片 1 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/2" target="_blank">
-                <img src="index/option/2.JPG" alt="图片 2">
-                <h3 class="image-title">图片 2 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/3" target="_blank">
-                <img src="index/option/3.JPG" alt="图片 3">
-                <h3 class="image-title">图片 3 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/4" target="_blank">
-                <img src="index/option/4.JPG" alt="图片 4">
-                <h3 class="image-title">图片 4 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/5" target="_blank">
-                <img src="index/option/5.JPG" alt="图片 5">
-                <h3 class="image-title">图片 5 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/6" target="_blank">
-                <img src="index/option/6.JPG" alt="图片 6">
-                <h3 class="image-title">图片 6 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/7" target="_blank">
-                <img src="index/option/7.JPG" alt="图片 7">
-                <h3 class="image-title">图片 7 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/8" target="_blank">
-                <img src="index/option/8.JPG" alt="图片 8">
-                <h3 class="image-title">图片 8 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/9" target="_blank">
-                <img src="index/option/9.JPG" alt="图片 9">
-                <h3 class="image-title">图片 9 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/10" target="_blank">
-                <img src="index/option/10.JPG" alt="图片 10">
-                <h3 class="image-title">图片 10 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/11" target="_blank">
-                <img src="index/option/11.JPG" alt="图片 11">
-                <h3 class="image-title">图片 11 标题</h3>
-            </a>
-            <a class="image-item" href="https://example.com/12" target="_blank">
-                <img src="index/option/12.JPG" alt="图片 12">
-                <h3 class="image-title">图片 12 标题</h3>
+    <!-- 导航栏 -->
+    <header>
+        <div class="logo">
+            <!-- 将 logo 图片用 a 标签包裹，点击返回首页 -->
+            <a href="index.html">
+                <img src="logo.png" alt="网站 logo">
             </a>
         </div>
+        <button class="toggle-button" onclick="toggleNav()" aria-label="切换导航菜单">☰</button>
+        <nav>
+            <ul id="nav-ul">
+                <li><a href="index.html">首页</a></li>
+                <li><a href="fonts.html">字库产品</a>
+                    <ul>
+                        <li><a href="">Z系列（基础字库）</a></li>
+                        <li><a href="">Δ系列（可变字体）</a></li>
+                        <li><a href="">Ω系列（典藏字体）</a></li>
+                    </ul>
+                </li>
+                <li><a href="bao.html">百宝库</a>
+                </li>
+                <li><a href="hao.html">字造导航</a>
+                </li>
+                <li><a href="more.html">更多服务</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- 嵌入网页容器 -->
+    <div class="iframe-container">
+        <iframe src="https://www.yuque.com/zizao/home/hello"></iframe>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        function toggleNav() {
+            const navUl = document.getElementById('nav-ul');
+            navUl.classList.toggle('show');
+        }
+    </script>
 </body>
 
 </html>
