--- a/index.html
+++ b/index.html
@@ -13,38 +13,53 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            min-height: 100vh;
+            font-family: Arial, sans-serif;
+        }
+
+        /* 公共样式 */
+        .hover-scale {
+            transition: transform 0.3s ease;
+        }
+
+        .hover-scale:hover {
+            transform: scale(1.1);
+        }
+
+        .hover-color {
+            transition: color 0.3s ease;
+        }
+
+        .hover-color:hover {
+            color: #000;
         }
 
         /* 导航栏样式 */
         header {
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: #f5f5f7;
             backdrop-filter: blur(20px);
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 44px;
+            height: 66px;
             position: relative;
             z-index: 3;
             transition: background-color 0.3s ease;
-            padding: 0 200px;
+            padding: 0 10%;
         }
 
         header:hover {
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: #e8e8ea;
         }
 
-        .logo {
+       .logo {
             margin-right: 20px;
-            transition: transform 0.3s ease;
         }
 
-        .logo a img {
+       .logo a img {
             display: block;
-        }
-
-        .logo:hover {
-            transform: scale(1.1);
+            max-width: 100%;
+            height: auto;
         }
 
         nav ul {
@@ -55,25 +70,20 @@
         }
 
         nav > ul > li {
-            margin: 0 20px;
+            margin: 0 15px;
             position: relative;
         }
 
         nav > ul > li > a {
-            color: #d6d6d6;
+            color: #333;
             text-decoration: none;
-            font-size: 12px;
+            font-size: 15px;
             position: relative;
             display: block;
             padding: 10px 0;
             transition: color 0.3s ease;
         }
 
-        nav > ul > li > a:hover {
-            color: #fff;
-        }
-
-        /* 导航栏一级链接下划线动画 */
         nav > ul > li > a::after {
             content: "";
             position: absolute;
@@ -81,7 +91,7 @@
             height: 2px;
             bottom: 0;
             left: 0;
-            background-color: #fff;
+            background-color: #000;
             transform: scaleX(0);
             transform-origin: bottom right;
             transition: transform 0.3s ease;
@@ -97,7 +107,7 @@
             display: none;
             position: absolute;
             top: 100%;
-            left: -20px;
+            left: -15px;
             background-color: #fff;
             min-width: 200px;
             border-radius: 0 0 10px 10px;
@@ -135,114 +145,254 @@
         }
 
         /* 折叠按钮样式 */
-        .toggle-button {
+       .toggle-button {
             display: none;
             background: none;
             border: none;
-            color: #d6d6d6;
+            color: #333;
             font-size: 20px;
             cursor: pointer;
             transition: color 0.3s ease;
         }
 
-        .toggle-button:hover {
-            color: #fff;
+       .toggle-button:hover {
+            color: #000;
         }
 
-        /* 嵌入网页容器样式 */
-        .iframe-container {
-            flex: 1;
+        /* 大图容器样式 */
+       .image-container {
+            position: relative;
             width: 100%;
             overflow: hidden;
-            position: relative;
         }
 
-        .iframe-container iframe {
-            position: absolute;
-            top: -125px; /* 隐藏顶部 100px 的内容 */
-            bottom: -400px; /* 隐藏底部 100px 的内容 */
+       .big-image {
             width: 100%;
-            height: calc(100% + 500px); /* 增加高度以补偿隐藏的部分 */
-            border: none;
+            height: auto;
+            display: block;
+            object-fit: cover;
         }
 
-        /* 媒体查询，当屏幕宽度小于600px时 */
-        @media (max-width: 600px) {
+        /* 文字容器样式 */
+       .text-container {
+            position: absolute;
+            bottom: 6%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            color: white;
+            text-align: left;
+        }
+
+       .text-container .first-line {
+            font-size: clamp(36px, 6vw, 72px);
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+       .text-container .second-line {
+            font-size: clamp(18px, 2vw, 24px);
+            margin-bottom: 15px;
+        }
+
+        /* 按钮容器样式 */
+       .button-container {
+            display: flex;
+            gap: 20px;
+        }
+
+        /* 了解详情按钮样式 */
+       .btn-detail {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: white;
+            color: #333;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+            transition: background-color 0.3s ease;
+        }
+
+       .btn-detail:hover {
+            background-color: #e6e6e6;
+        }
+
+        /* 下载按钮样式 */
+       .btn-download {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff4444;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+            transition: background-color 0.3s ease;
+        }
+
+       .btn-download:hover {
+            background-color: #cc0000;
+        }
+
+        /* 精选推荐文字样式 */
+       .recommended-text {
+            font-size: 28px;
+            margin-left: 10%;
+            padding-top: 40px;
+        }
+
+        /* 图片容器样式 */
+       .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 30px;
+            gap: 50px;
+            padding: 0 10%;
+        }
+
+        /* 图片样式 */
+       .image-gallery img {
+            height: auto;
+            max-width: 100%;
+            transition: transform 0.3s ease;
+        }
+
+       .image-gallery img:hover {
+            transform: scale(1.1);
+        }
+
+       .image-gallery .image-item {
+            flex: 1 1 calc(33.333% - 50px);
+            min-width: 250px;
+        }
+
+        /* 图片下方文字样式 */
+       .image-caption {
+            text-align: left;
+        }
+
+       .image-caption .first-row {
+            font-size: 15px;
+            margin-top: 1em;
+        }
+
+       .image-caption .second-row a {
+            color: inherit;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+       .image-caption .second-row a:hover {
+            color: #0070c9;
+        }
+
+        /* 第二个精选推荐样式 */
+       .second-recommended-text {
+            font-size: 28px;
+            margin-left: 10%;
+            padding-top: 40px;
+            margin-top: 1em;
+        }
+
+        /* 四张图片容器样式 */
+       .four-images-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            gap: 25px;
+            margin-top: 30px;
+            padding: 0 10%;
+        }
+
+        /* 四张图片样式 */
+       .four-images-gallery img {
+            width: 300px;
+            height: 250px;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+       .four-images-gallery img:hover {
+            transform: scale(1.1);
+        }
+
+        /* 底部导航栏样式 */
+        footer {
+            background-color: #f5f5f7;
+            padding: 20px 10%;
+            margin-top: 40px;
+            text-align: center;
+        }
+
+       .footer-nav {
+            margin-bottom: 10px;
+        }
+
+       .footer-nav a {
+            color: #333;
+            text-decoration: none;
+            margin: 0 15px;
+            transition: color 0.3s ease;
+        }
+
+       .footer-nav a:hover {
+            color: #000;
+        }
+
+       .copyright {
+            color: #666;
+            font-size: 14px;
+        }
+
+        /* 响应式导航菜单 */
+        @media (max-width: 768px) {
             header {
-                padding: 0 10px;
+                padding: 0 20px;
             }
 
             nav ul {
                 display: none;
-                flex-direction: column;
                 position: absolute;
-                top: 44px;
+                top: 66px;
                 left: 0;
-                background-color: rgba(0, 0, 0, 0.8);
                 width: 100%;
+                background-color: #f5f5f7;
+                flex-direction: column;
             }
 
             nav ul.show {
                 display: flex;
             }
 
-            nav ul li {
-                margin: 10px 20px;
+            nav > ul > li {
+                margin: 0;
             }
 
-            .toggle-button {
-                display: block;
+            nav > ul > li > a {
+                padding: 15px 20px;
             }
 
             nav ul li ul {
                 position: static;
-                background-color: transparent;
+                width: 100%;
                 box-shadow: none;
-                transform: none;
+                border-radius: 0;
                 opacity: 1;
                 visibility: visible;
+                transform: translateY(0);
                 display: none;
             }
 
             nav ul li:hover ul {
+                display: none;
+            }
+
+            nav ul li.active ul {
                 display: block;
             }
 
-            nav ul li ul li a {
-                color: #fff;
-            }
-        }
-
-        /* 媒体查询，当屏幕宽度在601px - 768px之间时（平板） */
-        @media (min-width: 601px) and (max-width: 768px) {
-            header {
-                padding: 0 20px;
-            }
-
-            nav > ul > li {
-                margin: 0 10px;
-            }
-
-            nav > ul > li > a {
-                font-size: 10px;
-            }
-        }
-
-        /* 媒体查询，当屏幕宽度在769px - 992px之间时（小桌面） */
-        @media (min-width: 769px) and (max-width: 992px) {
-            header {
-                padding: 0 50px;
-            }
-
-            nav > ul > li {
-                margin: 0 15px;
-            }
-        }
-
-        /* 媒体查询，当屏幕宽度在993px - 1200px之间时（大桌面） */
-        @media (min-width: 993px) and (max-width: 1200px) {
-            header {
-                padding: 0 100px;
+           .toggle-button {
+                display: block;
             }
         }
     </style>
@@ -254,41 +404,109 @@
         <div class="logo">
             <!-- 将 logo 图片用 a 标签包裹，点击返回首页 -->
             <a href="index.html">
-                <img src="logo.png" alt="网站 logo">
+                <img src="logo.png" alt="网站 logo" class="hover-scale">
             </a>
         </div>
-        <button class="toggle-button" onclick="toggleNav()" aria-label="切换导航菜单">☰</button>
+        <button class="toggle-button" aria-label="切换导航菜单">☰</button>
         <nav>
             <ul id="nav-ul">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="fonts.html">字库产品</a>
+                <li><a href="index.html" class="hover-color">首页</a></li>
+                <li><a href="fonts.html" class="hover-color">字库产品</a>
                     <ul>
                         <li><a href="">Z系列（基础字库）</a></li>
                         <li><a href="">Δ系列（可变字体）</a></li>
                         <li><a href="">Ω系列（典藏字体）</a></li>
                     </ul>
                 </li>
-                <li><a href="bao.html">百宝库</a>
-                </li>
-                <li><a href="hao.html">字造导航</a>
-                </li>
-                <li><a href="more.html">更多服务</a>
-                </li>
+                <li><a href="bao.html" class="hover-color">百宝库</a></li>
+                <li><a href="hao.html" class="hover-color">字造导航</a></li>
+                <li><a href="more.html" class="hover-color">更多服务</a></li>
             </ul>
         </nav>
     </header>
-
-    <!-- 嵌入网页容器 -->
-    <div class="iframe-container">
-        <iframe src="https://www.yuque.com/zizao/home/hello"></iframe>
+    <!-- 大图容器 -->
+    <div class="image-container">
+        <img class="big-image" src="index-image/your-image.jpg" alt="横向大图，展示网站相关内容">
+        <!-- 文字容器 -->
+        <div class="text-container">
+            <p class="first-line">字造起点黑</p>
+            <p class="second-line">即将上线</p>
+            <!-- 按钮容器 -->
+            <div class="button-container">
+                <a href="#" class="btn-detail">了解详情</a>
+                <a href="#" class="btn-download">下载</a>
+            </div>
+        </div>
     </div>
-
-    <script>
-        function toggleNav() {
-            const navUl = document.getElementById('nav-ul');
-            navUl.classList.toggle('show');
-        }
-    </script>
-</body>
-
-</html>
+    <!-- 精选推荐文字 -->
+    <div class="recommended-text">精选推荐</div>
+    <!-- 图片容器 -->
+    <div class="image-gallery">
+        <div class="image-item">
+            <a href="#" target="_blank">
+                <img src="index-image/image1.png" alt="图片1，展示字体设计相关内容" class="hover-scale">
+            </a>
+            <div class="image-caption">
+                <div class="first-row">字体设计</div>
+                <div class="second-row">
+                    <a href="#" target="_blank" class="hover-color">床前明月光疑是地上霜</a>
+                </div>
+            </div>
+        </div>
+        <div class="image-item">
+            <a href="#" target="_blank">
+                <img src="index-image/image2.png" alt="图片2，展示字体设计相关内容" class="hover-scale">
+            </a>
+            <div class="image-caption">
+                <div class="first-row">字体设计</div>
+                <div class="second-row">
+                    <a href="#" target="_blank" class="hover-color">床前明月光疑是地上霜</a>
+                </div>
+            </div>
+        </div>
+        <div class="image-item">
+            <a href="#" target="_blank">
+                <img src="index-image/image3.png" alt="图片3，展示字体设计相关内容" class="hover-scale">
+            </a>
+            <div class="image-caption">
+                <div class="first-row">字体设计</div>
+                <div class="second-row">
+                    <a href="#" target="_blank" class="hover-color">床前明月光疑是地上霜</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 复制的精选推荐文字 -->
+    <div class="second-recommended-text">精选推荐</div>
+    <!-- 四张图片容器 -->
+    <div class="four-images-gallery">
+        <a href="#" target="_blank">
+            <img src="index-image/image4.png" alt="图片4，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image5.png" alt="图片5，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image6.png" alt="图片6，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="image7.png" alt="图片7，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image8.png" alt="图片8，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image4.png" alt="图片4，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image5.png" alt="图片5，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image6.png" alt="图片6，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image7.png" alt="图片7，展示相关内容" class="hover-scale">
+        </a>
+        <a href="#" target="_blank">
+            <img src="index-image/image8.png" alt="图片8，展示相关内容" class="hover-scale">
+        </a>
