--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <img src="index-image/image6.png" alt="图片6，展示相关内容" class="hover-scale">
         </a>
         <a href="#" target="_blank">
-            <img src="image7.png" alt="图片7，展示相关内容" class="hover-scale">
+            <img src="index-image/image7.png" alt="图片7，展示相关内容" class="hover-scale">
         </a>
         <a href="#" target="_blank">
             <img src="index-image/image8.png" alt="图片8，展示相关内容" class="hover-scale">
