--- a/hao.html
+++ b/hao.html
@@ -37,6 +37,7 @@
         /* 头部导航栏样式 */
         header {
             background-color: #f5f5f7;
+            -webkit-backdrop-filter: blur(20px); 
             backdrop-filter: blur(20px);
             display: flex;
             justify-content: space-between;
