--- a/hao.html
+++ b/hao.html
@@ -477,11 +477,25 @@
             transition: 0.2s;
             font-size: 1rem;
             white-space: nowrap;
+            margin-left: 10px; /* 保持默认的 margin */
+            box-sizing: border-box;
         }
 
         #darkModeToggle:hover {
             background: #222;
         }
+
+        /* 媒体查询：手机端样式 */
+@media (max-width: 768px) {
+    /* 深色模式按钮样式 (手机端覆盖样式) */
+    #darkModeToggle {
+        width: calc(100% - 20px); /* 100% 减去左右两侧的 margin */
+        padding: 8px 12px; /* 减小 padding */
+        margin: 10px; /* 添加上下 margin，左右 margin 为 0 */
+        box-sizing: border-box; /* 确保 padding 和 border 不会增加按钮的总宽度 */
+        font-size: 0.9rem; /* 可选：减小字体大小 */
+    }
+}
 
         /* 内容分类 */
         .category {
@@ -614,6 +628,15 @@
                 min-width: auto;
             }
         }
+            /*  关键修改：手机端每行显示两个 */
+    .item-group {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /*  每行至少150px，最多1fr */
+    }
+
+    .nav-item {
+        width: 100%; /* 确保nav-item占据可用宽度 */
+    }
+}
 
         @media (max-width: 768px) {
             :root {
