--- a/hao.html
+++ b/hao.html
@@ -774,6 +774,15 @@
         body.dark-mode .logo a img {
             content: url('logo2.png'); /* 替换为深色模式下的 Logo 图片 */
         }
+
+        body.dark-mode .site-desc {
+            color: #ccc; /* 或者你想要的任何颜色 */
+        }
+
+        body.dark-mode nav ul li ul li a:hover {
+            background-color: #555; /* 悬浮时的背景色，可以根据你的喜好调整 */
+            color: #fff; /* 悬浮时的文字颜色，可以根据你的喜好调整 */
+        }
     </style>
 </head>
 
