--- a/hao.html
+++ b/hao.html
@@ -842,7 +842,7 @@
                             <a href="https://doubao.com/" target="_blank" tabindex="8">豆包</a>
                             <a href="https://kimi.moonshot.cn/" target="_blank" tabindex="9">Kimi</a>
                             <a href="https://tetr.io/" target="_blank" tabindex="10">TETR.IO</a>
-                            <a href="github.com" target="_blank" tabindex="11">Github</a>
+                            <a href="https://github.com" target="_blank" tabindex="11">Github</a>
                             <a href="https://www.axis-praxis.org/" target="_blank" tabindex="12">在线预览可变字</a>
 			    <a href="https://zizao.top/Super%20Index" target="_blank" tabindex="13">字造超引</a>
                         </div>
